fix: call-popup on mobile with height<500

--- a/src/ui/popups/call-popup/call-popup.scss
+++ b/src/ui/popups/call-popup/call-popup.scss
@@ -87,7 +87,22 @@
     &__inner {
       max-width: 100%;
       padding: 25px 0;
-      border-radius: 20px;
+      background-color: transparent;
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+
+      .close-btn {
+        position: initial;
+        align-self: flex-end;
+      }
+
+      .container {
+        padding-top: 25px;
+        padding-bottom: 25px;
+        background-color: var(--base100);
+        border-radius: 20px;
+      }
     }
 
     &__form-title {
